<resources>
	<string name="app_name">Movie Catalogue</string>
	<string name="title">Title</string>
	<string name="genres">Genres</string>
	<string name="date_release">Date Release</string>
	<string name="rating">Rating</string>
	<string name="runtime">Runtime</string>
	<string name="overview">Overview</string>
	<string name="movies">Movies</string>
	<string name="tv_shows">TV Shows</string>
	<string-array name="data_movie_title">
		<item>The Lion King</item>
		<item>Men in Black: International</item>
		<item>Avengers: Endgame</item>
		<item>Aladdin</item>
		<item>Spider-Man: Far from Home</item>
		<item>The Secret Life of Pets 2</item>
		<item>Pokémon Detective Pikachu</item>
		<item>Captain Marvel</item>
		<item>Alita: Battle Angel</item>
		<item>How to Train Your Dragon: The Hidden World</item>
		<item>Glass</item>
	</string-array>
	<string-array name="data_movie_genres">
		<item>Adventure, Animation, Family, Drama, Action</item>
		<item>Action, Comedy, Science Fiction, Adventure</item>
		<item>Adventure, Science Fiction, Action</item>
		<item>Adventure, Fantasy, Romance, Comedy, Family</item>
		<item>Action, Adventure, Science Fiction</item>
		<item>Adventure, Animation, Comedy, Family</item>
		<item>Action, Adventure, Fantasy</item>
		<item>Action, Adventure, Science Fiction</item>
		<item>Action, Science Fiction, Thriller, Adventure</item>
		<item>Animation, Family, Adventure</item>
		<item>Thriller, Drama, Science Fiction</item>
	</string-array>
	<string-array name="data_movie_date_release">
		<item>July 19, 2019</item>
		<item>June 14, 2019</item>
		<item>April 26, 2019</item>
		<item>May 24, 2019</item>
		<item>July 2, 2019</item>
		<item>June 7, 2019</item>
		<item>May 10, 2019</item>
		<item>March 8, 2019</item>
		<item>February 14, 2019</item>
		<item>February 22, 2019</item>
		<item>January 18, 2019</item>
	</string-array>
	<string-array name="data_movie_rating">
		<item>PG</item>
		<item>PG-13</item>
		<item>PG-13</item>
		<item>PG</item>
		<item>PG-13</item>
		<item>PG</item>
		<item>PG</item>
		<item>PG-13</item>
		<item>PG-13</item>
		<item>PG</item>
		<item>PG-13</item>
	</string-array>
	<string-array name="data_movie_runtime">
		<item>1h 58m</item>
		<item>1h 55m</item>
		<item>3h 1m</item>
		<item>2h 8m</item>
		<item>2h 9m</item>
		<item>1h 26m</item>
		<item>1h 45m</item>
		<item>2h 4m</item>
		<item>2h 2m</item>
		<item>1h 44m</item>
		<item>2h 9m</item>
	</string-array>
	<string-array name="data_movie_overview">
		<item>Simba idolises his father, King Mufasa, and takes to heart his own royal destiny. But not everyone in the kingdom celebrates the new cub\'s arrival. Scar, Mufasa\'s brother—and former heir to the throne—has plans of his own. The battle for Pride Rock is ravaged with betrayal, tragedy and drama, ultimately resulting in Simba\'s exile. With help from a curious pair of newfound friends, Simba will have to figure out how to grow up and take back what is rightfully his.</item>
		<item>The Men in Black have always protected the Earth from the scum of the universe. In this new adventure, they tackle their biggest, most global threat to date: a mole in the Men in Black organization.</item>
		<item>After the devastating events of Avengers: Infinity War, the universe is in ruins due to the efforts of the Mad Titan, Thanos. With the help of remaining allies, the Avengers must assemble once more in order to undo Thanos actions and restore order to the universe once and for all, no matter what consequences may be in store.</item>
		<item>A kindhearted street urchin named Aladdin embarks on a magical adventure after finding a lamp that releases a wisecracking genie while a power-hungry Grand Vizier vies for the same lamp that has the power to make their deepest wishes come true.</item>
		<item>Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.</item>
		<item>Max the terrier must cope with some major life changes when his owner gets married and has a baby. When the family takes a trip to the countryside, nervous Max has numerous run-ins with canine-intolerant cows, hostile foxes and a scary turkey. Luckily for Max, he soon catches a break when he meets Rooster, a gruff farm dog who tries to cure the lovable pooch of his neuroses.</item>
		<item>In a world where people collect pocket-size monsters (Pokémon) to do battle, a boy comes across an intelligent monster who seeks to be a detective.</item>
		<item>The story follows Carol Danvers as she becomes one of the universe’s most powerful heroes when Earth is caught in the middle of a galactic war between two alien races. Set in the 1990s, Captain Marvel is an all-new adventure from a previously unseen period in the history of the Marvel Cinematic Universe.</item>
		<item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
		<item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
		<item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
	</string-array>
	<string-array name="data_tv_title">
		<item>Adventure Time</item>
		<item>Attack on Titan</item>
		<item>Chernobyl</item>
		<item>Death Note</item>
		<item>Dragon Ball Super</item>
		<item>One Piece</item>
		<item>One-Punch Man</item>
		<item>Pandora</item>
		<item>Supergirl</item>
		<item>The Amazing World of Gumball</item>
	</string-array>
	<string-array name="data_tv_genres">
		<item>Fantasy, Animation, Comedy</item>
		<item>Animation, Sci-Fi &amp; Fantasy, Drama, War &amp; Politics, Mystery, Action &amp; Adventure</item>
		<item>Drama</item>
		<item>Animation, Mystery</item>
		<item>Animation, Mystery, Action &amp; Adventure, Comedy</item>
		<item>Action &amp; Adventure, Comedy, Animation</item>
		<item>Action &amp; Adventure, Animation, Comedy</item>
		<item>Action &amp; Adventure, Sci-Fi &amp; Fantasy</item>
		<item>Action, Adventure, Drama, Science Fiction</item>
		<item>Family, Sci-Fi &amp; Fantasy, Animation, Comedy</item>
	</string-array>
	<string-array name="data_tv_rating">
		<item>TV-PG</item>
		<item>TV-MA</item>
		<item>TV-MA</item>
		<item>TV-14</item>
		<item>TV-14</item>
		<item>12</item>
		<item>MA15+</item>
		<item>14</item>
		<item>TV-PG</item>
		<item>-</item>
	</string-array>
	<string-array name="data_tv_runtime">
		<item>11m</item>
		<item>24m</item>
		<item>70m, 60m</item>
		<item>22m</item>
		<item>24m</item>
		<item>25m</item>
		<item>24m</item>
		<item>42m</item>
		<item>42m</item>
		<item>11m</item>
	</string-array>
	<string-array name="data_tv_overview">
		<item>They\'re not righteous, they\'re wrongteous! Hook up with Finn and Jake as they travel the Land of Ooo searching for adventure. But remember, adventure isn\'t always easy. Sometimes you\'ve got to battle fire gnomes that torture old ladies, save a smelly hot dog princess from the Ice King, and thaw out a bunch of frozen businessmen. What the cabbage?!</item>
		<item>Several hundred years ago, humans were nearly exterminated by Titans. Titans are typically several stories tall, seem to have no intelligence, devour human beings and, worst of all, seem to do it for the pleasure rather than as a food source. A small percentage of humanity survived by walling themselves in a city protected by extremely high walls, even taller than the biggest Titans. Flash forward to the present and the city has not seen a Titan in over 100 years. Teenage boy Eren and his foster sister Mikasa witness something horrific as the city walls are destroyed by a Colossal Titan that appears out of thin air. As the smaller Titans flood the city, the two kids watch in horror as their mother is eaten alive. Eren vows that he will murder every single Titan and take revenge for all of mankind.</item>
		<item>A dramatization of the true story of one of the worst man-made catastrophes in history, the catastrophic nuclear accident at Chernobyl. A tale of the brave men and women who sacrificed to save Europe from unimaginable disaster.</item>
		<item>Light Yagami is an ace student with great prospects—and he\'s bored out of his mind. But all that changes when he finds the Death Note, a notebook dropped by a rogue Shinigami death god. Any human whose name is written in the notebook dies, and Light has vowed to use the power of the Death Note to rid the world of evil. But will Light succeed in his noble goal, or will the Death Note turn him into the very thing he fights against?</item>
		<item>Set just after the events of the Buu Saga of Dragon Ball Z, a deadly threat awakens once more. People lived in peace without knowing who the true heroes were during the devastating battle against Majin Buu. The powerful Dragon Balls have prevented any permanent damage, and our heroes also continue to live a normal life. In the far reaches of the universe, however, a powerful being awakens early from his slumber, curious about a prophecy of his defeat.</item>
		<item>Years ago, the fearsome pirate king Gol D. Roger was executed, leaving a huge pile of treasure and the famous "One Piece" behind. Whoever claims the "One Piece" will be named the new pirate king. Monkey D. Luffy, a boy who consumed one of the "Devil's Fruits", has it in his head that he\'ll follow in the footsteps of his idol, the pirate Shanks, and find the One Piece. It helps, of course, that his body has the properties of rubber and he\'s surrounded by a bevy of skilled fighters and thieves to help him along the way. Monkey D. Luffy brings a bunch of his crew followed by, Roronoa Zoro, Nami, Usopp, Sanji, Tony-Tony Chopper, Nico Robin, Franky, and Brook. They will do anything to get the One Piece and become King of the Pirates!</item>
		<item>Saitama is a hero who only became a hero for fun. After three years of “special” training, though, he\'s become so strong that he\'s practically invincible. In fact, he\'s too strong—even his mightiest opponents are taken out with a single punch, and it turns out that being devastatingly powerful is actually kind of a bore. With his passion for being a hero lost along with his hair, yet still faced with new enemies every day, how much longer can he keep it going?</item>
		<item>In the year 2199, a young woman who has lost everything finds a new life at Earth\'s Space Training Academy where she learns to defend the galaxy from intergalactic threats.</item>
		<item>Twenty-four-year-old Kara Zor-El, who was taken in by the Danvers family when she was 13 after being sent away from Krypton, must learn to embrace her powers after previously hiding them. The Danvers teach her to be careful with her powers, until she has to reveal them during an unexpected disaster, setting her on her journey of heroism.</item>
		<item>The life of Gumball Watterson, a 12-year old cat who attends middle school in Elmore. Accompanied by his pet, adoptive brother, and best friend Darwin Watterson, he frequently finds himself involved in various shenanigans around the city, during which he interacts with various family members: Anais, Richard, and Nicole Watterson, and other various citizens.</item>
	</string-array>
	<string name="movie_poster">Movie Poster</string>
	<string name="tv_show_poster">TV Show Poster</string>
</resources>