<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="?android:attr/selectableItemBackground"
	android:padding="@dimen/activity_vertical_margin">

	<ImageView
		android:id="@+id/iv_tvshow_poster"
		android:layout_width="100dp"
		android:layout_height="150dp"
		android:layout_marginEnd="@dimen/activity_horizontal_margin"
		android:contentDescription="@string/tv_show_poster"
		android:scaleType="fitXY"
		tools:src="@android:color/darker_gray" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_toEndOf="@id/iv_tvshow_poster"
		android:orientation="vertical">

		<TextView
			android:id="@+id/tv_tvshow_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:textSize="16sp"
			android:textStyle="bold"
			tools:text="@string/title" />

		<TextView
			android:id="@+id/tv_tvshow_genre"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ellipsize="end"
			android:maxLines="2"
			tools:text="@string/genres" />

	</LinearLayout>

</RelativeLayout>