<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/activity_vertical_margin"
		tools:context=".MovieDetail">

		<ProgressBar
			android:id="@+id/progress_bar_detail"
			style="?android:attr/progressBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<ImageView
			android:id="@+id/iv_movie_poster_detail"
			android:layout_width="200dp"
			android:layout_height="300dp"
			android:contentDescription="@string/movie_poster"
			android:scaleType="fitXY"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.0"
			tools:src="@android:color/darker_gray" />

		<TextView
			android:id="@+id/tv_movie_title_detail"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			tools:text="@string/title"
			android:textAlignment="center"
			android:textColor="@android:color/black"
			android:textSize="18sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="@+id/iv_movie_poster_detail"
			app:layout_constraintStart_toStartOf="@+id/iv_movie_poster_detail"
			app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster_detail" />

		<TextView
			android:id="@+id/tv_movie_genres_detail"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			tools:text="@string/genres"
			android:textAlignment="center"
			android:textSize="16sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="@+id/tv_movie_title_detail"
			app:layout_constraintStart_toStartOf="@+id/tv_movie_title_detail"
			app:layout_constraintTop_toBottomOf="@+id/tv_movie_title_detail" />

		<TextView
			android:id="@+id/movie_date_release_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:ellipsize="middle"
			android:text="@string/date_release"
			android:textColor="@android:color/black"
			android:textSize="16sp"
			android:visibility="gone"
			app:layout_constraintEnd_toStartOf="@+id/movie_overview_text"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tv_movie_genres_detail" />

		<TextView
			android:id="@+id/tv_movie_date_release_detail"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			tools:text="@string/date_release"
			android:textSize="14sp"
			app:layout_constraintEnd_toEndOf="@+id/movie_date_release_text"
			app:layout_constraintStart_toStartOf="@+id/movie_date_release_text"
			app:layout_constraintTop_toBottomOf="@+id/movie_date_release_text" />

		<TextView
			android:id="@+id/movie_rating_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/rating"
			android:textColor="@android:color/black"
			android:textSize="16sp"
			android:visibility="gone"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/movie_overview_text"
			app:layout_constraintTop_toBottomOf="@+id/tv_movie_genres_detail" />

		<TextView
			android:id="@+id/tv_movie_rating_detail"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			tools:text="@string/rating"
			android:textSize="14sp"
			app:layout_constraintEnd_toEndOf="@+id/movie_rating_text"
			app:layout_constraintStart_toStartOf="@+id/movie_rating_text"
			app:layout_constraintTop_toBottomOf="@+id/movie_rating_text" />

		<TextView
			android:id="@+id/movie_overview_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/overview"
			android:textColor="@android:color/black"
			android:textSize="16sp"
			android:visibility="gone"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.498"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tv_movie_rating_detail" />

		<TextView
			android:id="@+id/tv_movie_overview_detail"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			tools:text="@string/overview"
			android:textSize="14sp"
			app:layout_constraintEnd_toEndOf="@+id/movie_overview_text"
			app:layout_constraintStart_toStartOf="@+id/movie_overview_text"
			app:layout_constraintTop_toBottomOf="@+id/movie_overview_text" />

		<Button
			android:id="@+id/btn_favourite"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/add_to_favourite"
			android:visibility="gone"
			style="@style/Widget.AppCompat.Button.Colored"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview_detail" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>